--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,15 +6,15 @@
     <a class="nav-link" href="#">!</a>
   </div>
 </nav>
-<div class="row upperlimit"></div>
-<div class="row align-content-center">
-  <div class="col-lg-4"></div>
-  <div class="col-lg-4 loginForm align-content-center text-center">
-    <router-outlet></router-outlet>
+  <div class="row upperlimit"></div>
+  <div class="row align-content-center">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4 loginForm align-content-center text-center">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-lg-4"></div>
   </div>
-  <div class="col-lg-4"></div>
-</div>
-<footer class="py-3 my-4">
+<footer class="footer">
   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
     <li class="nav-item"><a class="nav-link px-2 text-body-secondary">Features</a></li>
     <li class="nav-item"><a class="nav-link px-2 text-body-secondary">Pricing</a></li>
