--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar nvb">
   <div class="container">
     <a class="nav-link" href="#">Navbar</a>
     <a class="nav-link" href="#">Non</a>
@@ -8,11 +8,11 @@
 </nav>
   <div class="row upperlimit"></div>
   <div class="row align-content-center">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4 loginForm align-content-center text-center">
+    <div class="col-lg-3 d-lg-flex"></div>
+    <div class="col-lg-6 loginForm align-content-center text-center">
       <router-outlet></router-outlet>
     </div>
-    <div class="col-lg-4"></div>
+    <div class="col-lg-3 d-flex"></div>
   </div>
 <footer class="footer">
   <ul class="nav justify-content-center border-bottom pb-3 mb-3">
