--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,13 @@
 .loginForm {
-    background-color: rgb(79, 79, 79);
+    background-color: rgb(100, 100, 100);
     padding: 20px;
     border-radius: 3%;
+    width: 50%;
+    height: 60%;
+}
+
+.nvb {
+    border-bottom: solid 1px white;
 }
 
 .errorDiv {
@@ -9,7 +15,7 @@
 }
 
 .upperlimit {
-    height: 200px;
+    height: 180px;
 }
 
 .nav-link {
@@ -37,8 +43,23 @@
     * {
         color: white !important;
     }
-  }
+    border-top: solid 1px white;
+}
 
-  .row {
-    --bs-gutter-x: 0rem;
-  }
+.row {
+--bs-gutter-x: 0rem;
+}
+
+
+@media only screen and (max-width: 980px) {
+    .loginForm {
+        background-color: rgb(100, 100, 100);
+        padding: 20px;
+        border-radius: 0px;
+        width: 100%;
+        height: 100vh;
+    }
+    .upperlimit {
+        height: 0px;
+    }
+}
