--- a/src/app/login/loginbox/loginbox.component.html
+++ b/src/app/login/loginbox/loginbox.component.html
@@ -1,5 +1,5 @@
 <div>
-    <img src={{imagePath}}/>
+    <i class="fa fa-user fa-5x"></i>
     <form [formGroup]="fg" (ngSubmit)="validateForm()">
         <br><input type="text" placeholder="Username" formControlName="username"/>
         <br><input type="password" placeholder="Password" formControlName="password"/>
